--- a/aula06/ex004.html
+++ b/aula06/ex004.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Meu Primeiro Programa</title>
+    <title>Ex 04</title>
     <style>
         body {
             font: normal 20pt Arial;
@@ -14,8 +14,8 @@
 <body>
     <script>
        var nome = window.prompt('Qual é o seu nome ?')
-        document.write(`hahaha é palmeirense ${nome} você não tem mundial`)
-        document.write(`Seu nome em maiúsculas fica ${nome.touppercase}`)
+        document.write(`Olá, <strong>${nome}</strong>, Seu nome tem ${nome.length} letras <br>`)
+        document.write(`Seu nome em maiúsculas fica ${nome.toUpperCase()}`)
     </script>
 </body>
 </html>
