--- a/aula06/ex002.html
+++ b/aula06/ex002.html
@@ -13,9 +13,9 @@
 </head>
 <body>
     <script>
-       var nome = window.prompt('Qual é o seu nome ?')
-        document.write(`hahaha é palmeirense ${nome} você não tem mundial`)
-        document.write(`Seu nome em maiúsculas fica ${nome.touppercase}`)
+        window.prompt('Como assim cara')
+        document.write(`detonar os porco, recebaaa, melhor de todos graças a Deus <br>`)
+        document.write('Eu sou o Milhiorrr')
     </script>
 </body>
 </html>
