--- a/aula06/ex002.html
+++ b/aula06/ex002.html
@@ -13,9 +13,9 @@
 </head>
 <body>
     <script>
-        window.prompt('Como assim cara')
+         var nome = window.prompt('Como assim cara')
         document.write(`detonar os porco, recebaaa, melhor de todos graças a Deus <br>`)
-        document.write('Eu sou o Milhiorrr')
+        document.write(`Eu sou o Milhiorrr ${nome}`)
     </script>
 </body>
 </html>
