--- a/aula06/ex003.html
+++ b/aula06/ex003.html
@@ -25,7 +25,7 @@
          var n1 = Number(window.prompt('Digite um número: '))
          var n2 = Number(window.prompt('Digite outro número: '))
          s = n1 + n2
-         window.alert(`A soma entre ${n1} e ${n2} é igual a ${s}`)
+         window.alert(`A soma entre ${n1} e ${n2} é igual a R$${s.toFixed(2).replace('.', ',')}`)
     </script>
 </body>
 </html>
