--- a/aula07/ex005.html
+++ b/aula07/ex005.html
@@ -14,7 +14,7 @@
     </style>
 </head>
 <body>
-    <h1>Iniciando esrudos DOM</h1>
+    <h1>Iniciando estudos DOM</h1>
     <p>Aqui vai o resultado</p>
     <p>Aprendendo a usar o <strong>DOM</strong> em JS.</p>
     <div>clique em mim</div>
