complemento do Ex006

--- a/aula10/ex006.html
+++ b/aula10/ex006.html
@@ -15,6 +15,7 @@
             line-height: 200px;
             text-align: center;
         }
+
     </style>
 </head>
 <body>
@@ -22,7 +23,25 @@
         interaja... 
     </div>
     <script>
-        
+        var a = window.document.getElementById('area')
+        a.addEventListener('click', clicar)
+        a.addEventListener('mouseenter', entrar)
+        a.addEventListener('mouseout', sair)
+
+        function clicar() {
+            a.innerText = 'Clicou!'
+            a.style.background = 'red'
+        }
+
+        function entrar() {
+            a.innerText = 'Entrou!'
+        }
+
+        function sair() {
+            a.innerText = 'Saiu!'
+            a.style.background = 'black'
+        }
+
     </script>
 </body>
 </html>
