--- a/Exercicios/Ex001.html
+++ b/Exercicios/Ex001.html
@@ -11,26 +11,31 @@
         }
         div#principal {
             border-radius: 10px;
-            height: 300px;
-            width: 400px;
+            height: 400px;
+            width: 600px;
             background-color: aqua;
             box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.425);
+            margin: auto;
         }
     </style>
 </head>
 <body>
-    <h1>Hora do Dia</h1>
+    <header>
+        <h1>Hora do Dia</h1>
+    </header>
     <div id="principal">
-        
+        <img src="" alt="">
     </div>
     <script>
-        var agora = new Date()
-        var horario = agora.getHours()
+        var dia = 8
         var div = window.document.getElementById('principal')
-        if (horario > 0 && horario < 12) {
-            
-        }
+        var conteudo = div.value()
+        function dia() {
+            if (dia > 0 && dia < 12) {
 
+            conteudo.innerHTML(`Bom dia !`)
+        }
+    }
     </script>
 </body>
 </html>
