--- a/Site Do Dia/modelo.html
+++ b/Site Do Dia/modelo.html
@@ -7,20 +7,21 @@
     <title>modelo</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body onload="carregar()">
     <header>
-        <h1>titulo</h1>
+        <h1>Hora Do Dia</h1>
     </header>
     <section>
-        <div>
-            
+        <div id="msg">
+           foto do dia
         </div>
         <div>
-
+            <img id="imagem" src="" alt="">
         </div>
     </section>
     <footer>
-        <p>considerações</p>
+        <p>&copy; Jeff Cerqueira</p>
     </footer>
+    <script src="script.js"></script>
 </body>
 </html>
