--- a/Cadastrando pessoa/cadastro.html
+++ b/Cadastrando pessoa/cadastro.html
@@ -4,24 +4,23 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>modelo</title>
+    <title>Cadastre-se</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body onload="carregar()">
+<body>
     <header>
-        <h1>Hora Do Dia</h1>
+        <h1>Verificacor De Idade</h1>
     </header>
     <section>
-        <div id="msg">
-           foto do dia
+        <div>
+            aqui tem a msg
         </div>
         <div>
-            <img id="imagem" src="" alt="">
+            aqui é a imagem
         </div>
     </section>
     <footer>
-        <p>&copy; Jeff Cerqueira</p>
+        aqui é as considerações finais
     </footer>
-    <script src="script.js"></script>
 </body>
 </html>
