--- a/Cadastrando pessoa/cadastro.html
+++ b/Cadastrando pessoa/cadastro.html
@@ -13,14 +13,26 @@
     </header>
     <section>
         <div>
-            aqui tem a msg
+            <p>Ano de Nascimento:
+                <input type="number" name="txtano" id="txtano" min="0">
+            </p>
+            <p>Sexo:
+                <input type="radio" name="radsex" id="mas">
+                <label for="mas">Masculino</label>
+                <input type="radio" name="radsex" id="fem">
+                <label for="fem">Feminino</label>
+            </p>
+            <p>
+                <input type="button" value="Verificar" onclick="verificar()">
+            </p>
         </div>
-        <div>
-            aqui é a imagem
+        <div id="res">
+            Preencha os dados acima para ver o resultado !
         </div>
     </section>
     <footer>
-        aqui é as considerações finais
+        &copy; JeffCerqueira
     </footer>
+    <script src="script.js"></script>
 </body>
 </html>
